--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
 
         // Charger les images
         const starshipImg = new Image();
-        starshipImg.src = 'starship.jpg';
+        starshipImg.src = 'IMG/starship.jpg';
 
         const bulletImg = new Image();
-        bulletImg.src = 'bullets.jpg';
+        bulletImg.src = 'IMG/bullets.jpg';
 
         const enemyImgs = [new Image(), new Image(), new Image()];
-        enemyImgs[0].src = 'enemy.jpg';
-        enemyImgs[1].src = 'enemy2.jpg';
-        enemyImgs[2].src = 'enemy3.jpg';
+        enemyImgs[0].src = 'IMG/enemy.jpg';
+        enemyImgs[1].src = 'IMG/enemy2.jpg';
+        enemyImgs[2].src = 'IMG/enemy3.jpg';
 
         const enemyBulletImgs = [new Image(), new Image(), new Image()];
-        enemyBulletImgs[0].src = 'bullets2.jpg';
-        enemyBulletImgs[1].src = 'bullets3.jpg';
-        enemyBulletImgs[2].src = 'bullets4.jpg';
+        enemyBulletImgs[0].src = 'IMG/bullets2.jpg';
+        enemyBulletImgs[1].src = 'IMG/bullets3.jpg';
+        enemyBulletImgs[2].src = 'IMG/bullets4.jpg';
 
         const lifeImg = new Image();
-        lifeImg.src = 'lives.jpg';
+        lifeImg.src = 'IMG/lives.jpg';
 
         const powerUpImgs = [new Image(), new Image()];
-        powerUpImgs[0].src = 'powerUp.png';
-        powerUpImgs[1].src = 'powerUp2.png';
+        powerUpImgs[0].src = 'IMG/powerUp.png';
+        powerUpImgs[1].src = 'IMG/powerUp2.png';
 
         const starship = {
             x: canvas.width / 2,
@@ -213,6 +213,7 @@
             });
         }
 
+        
         // Mettre à jour le canvas
         function update() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -306,6 +307,7 @@
             }
         });
 
+        
         // Démarrer la boucle de jeu une fois que les images sont chargées
         starshipImg.onload = () => {
             bulletImg.onload = () => {
