--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             top: 20px;
             left: 20px;
             font-size: 20px;
-            z-index: 10;
+            z-index: 10;;
         }
     </style>
 </head>
@@ -40,3 +40,4 @@
 </body>
 
 </html>
+
