--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             overflow: hidden;
             background: #000;
-            color: white;
+            color: blue;
             font-family: Arial, sans-serif;
         }
 
